<resources>
    <string name="app_name">VB App</string>
    <string name="tab_text_1">Hike</string>
    <string name="tab_text_2">Record</string>
    <string name="START">START</string>
    <string name="STOP">STOP</string>
    <string name="GOAL">GOAL</string>
    <string name="watch">WATCH</string>
    <string name="match_name">match_name</string>
    <string name="match_day">match_day</string>
    <string name="match_url">match_url</string>
    <string name="add">Add</string>
    <string name="v">V League</string>
    <string name="s">Serie A</string>
    <string name="o">Other</string>
    <string name="nt">NT</string>

    <string name="delete">Delete</string>

    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tues">Tues</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
</resources>