<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!--
    <TextView
        android:id="@+id/match_name_GRD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="5dp"
        android:textSize="15sp"
        android:text="@string/match_name"
        />
     -->

    <TextView
        android:id="@+id/match_day_GRD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="5dp"
        android:textSize="15sp"
        android:text="@string/match_day"
        />

    <TextView
        android:id="@+id/match_url_GRD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="5dp"
        android:textSize="15sp"
        android:text="@string/match_url"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_gravity="start"
            android:text="@string/delete"
            android:drawableLeft="@drawable/baseline_delete_24"
            />

        <Button
            android:id="@+id/watchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:drawableLeft="@drawable/baseline_play_circle_24"
            />


    </LinearLayout>



</LinearLayout>